docker-compose/templates/nodejs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.service.expose: "true"
    kompose.service.type: nodeport
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: nodejs
  name: nodejs
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nodejs
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c
        kompose.service.expose: "true"
        kompose.service.type: nodeport
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/app-network: "true"
        io.kompose.service: nodejs
    spec:
      containers:
        - args:
            - ./wait-for.sh
            - db:27017
            - --
            - /home/node/app/node_modules/.bin/nodemon
            - index.js
          image: nodejs
          name: nodejs
          ports:
            - containerPort: 3000
          resources: {}
          volumeMounts:
            - mountPath: /home/node/app
              name: nodejs-claim0
            - mountPath: /home/node/app/node_modules
              name: node-modules
      restartPolicy: Always
      volumes:
        - name: nodejs-claim0
          persistentVolumeClaim:
            claimName: nodejs-claim0
        - name: node-modules
          persistentVolumeClaim:
            claimName: node-modules
status: {}
