docker-compose/templates/nodejs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.service.expose: "true"
    kompose.service.type: nodeport
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: nodejs
  name: nodejs
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: nodejs
                port:
                  number: 3000
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
